--- a/cmd/gtoken-webhook/.golangci.yaml
+++ b/cmd/gtoken-webhook/.golangci.yaml
@@ -16,8 +16,6 @@ run:
 linters-settings:
   govet:
     check-shadowing: true
-  golint:
-    min-confidence: 0
   gocyclo:
     min-complexity: 15
   maligned:
@@ -59,35 +57,31 @@ linters:
   enable:
     # - rowserrcheck
     - bodyclose
-    - deadcode
-    - depguard
+    # - depguard
     - dogsled
     - dupl
     - errcheck
+    - exportloopref
     - funlen
     - goconst
     - gocritic
     - gocyclo
     - gofmt
     - goimports
-    - golint
     - gosec
     - gosimple
     - govet
     - ineffassign
-    - interfacer
     - lll
     - misspell
     - nakedret
-    - scopelint
+    - revive
     - staticcheck
-    - structcheck
     - stylecheck
     - typecheck
     - unconvert
     - unparam
     - unused
-    - varcheck
     - whitespace
 
   # don't enable:
