--- a/cmd/gtoken/.golangci.yaml
+++ b/cmd/gtoken/.golangci.yaml
@@ -13,10 +13,17 @@ run:
   tests: false
 
 linters-settings:
+  depguard:
+    rules:
+      main:
+        allow:
+          - github.com/doitintl/gtoken/internal/gcp
+          - github.com/urfave/cli/v2
+          - $gostd
   govet:
     check-shadowing: true
-  golint:
-    min-confidence: 0
+  # golint:
+    # min-confidence: 0
   gocyclo:
     min-complexity: 15
   maligned:
@@ -58,35 +65,37 @@ linters:
   enable:
     # - rowserrcheck
     - bodyclose
-    - deadcode
+    # - deadcode
     - depguard
     - dogsled
     - dupl
     - errcheck
+    - exportloopref
     - funlen
     - goconst
     - gocritic
     - gocyclo
     - gofmt
     - goimports
-    - golint
+    # - golint
     - gosec
     - gosimple
     - govet
     - ineffassign
-    - interfacer
+    # - interfacer
     - lll
     - misspell
     - nakedret
-    - scopelint
+    - revive
+    # - scopelint
     - staticcheck
-    - structcheck
+    # - structcheck
     - stylecheck
     - typecheck
     - unconvert
     - unparam
     - unused
-    - varcheck
+    # - varcheck
     - whitespace
 
   # don't enable:
@@ -99,3 +108,4 @@ linters:
 issues:
     exclude:
         - Using the variable on range scope `tt` in function literal
+
