--- a/cmd/gtoken/Dockerfile
+++ b/cmd/gtoken/Dockerfile
@@ -3,11 +3,11 @@
 #
 # ----- Go Builder Image ------
 #
-FROM golang:1.17-alpine AS builder
+FROM golang:1.22.2-alpine3.19 AS builder
 
 # curl git bash
 RUN apk add --no-cache curl git bash make
-COPY --from=golangci/golangci-lint:v1.45-alpine /usr/bin/golangci-lint /usr/bin
+COPY --from=golangci/golangci-lint:v1.59.0-alpine /usr/bin/golangci-lint /usr/bin
 
 #
 # ----- Build and Test Image -----
@@ -33,7 +33,7 @@ RUN make
 #
 # ------ get latest CA certificates
 #
-FROM alpine:3.15 as certs
+FROM alpine:3.19 as certs
 RUN apk --update add ca-certificates
 # this is for debug only Alpine image
 COPY --from=build /go/src/gtoken/.bin/github.com/doitintl/gtoken /gtoken
@@ -47,7 +47,7 @@ FROM scratch
 # copy CA certificates
 COPY --from=certs /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/ca-certificates.crt
 
-# this is the last commabd since it's never cached
+# this is the last command since it's never cached
 COPY --from=build /go/src/gtoken/.bin/github.com/doitintl/gtoken /gtoken
 
 ENTRYPOINT ["/gtoken"]
